[package]
name = "plexhue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hueclient = "0.4.2"
clap = { version = "4.0.15", features = ["derive"] }
serde_json = "1.0.86"
serde = "1.0.145"
rocket = "0.4.11"
rocket_contrib = "0.4.11"
regex = "1.6.0"
